fixed contact us section on mobile

--- a/src/sections/ContactUsSection/ContactUsSection.css
+++ b/src/sections/ContactUsSection/ContactUsSection.css
@@ -13,8 +13,6 @@
 .contact-us-section-container-mobile {
   display: grid;
   grid-template-rows: fit-content(200px) 1fr;
-  padding-top: 40px;
-  padding-bottom: 30px;
   border-left: 10px solid #ff4970;
 }
 
@@ -176,4 +174,11 @@
   top: 50%;
   height: 100%;
   margin-left: calc(50% - 32px);
+}
+.left-pane {
+  color: white;
+  font-size: 35px;
+  opacity: 0.9;
+  font-weight: bolder;
+  padding: 50px;
 }
